--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.32.8",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-catch-links": "^2.10.0",
     "gatsby-plugin-gatsby-cloud": "^1.0.2",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-sharp": "^2.12.0",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "reactstrap": "^8.9.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
