--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
